# DBlicious

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  GLOSSARY.md  README.md  ROADMAP.md  VISION.md
.claude/: ccm.toml  dev-executor-ext.md  settings.json  settings.local.json  triage-config.toml  triage-monitor-ext.md
.githooks/: pre-commit  pre-push
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: migrate_security.rs
client/: Cargo.toml  Trunk.toml  index.html
client/locales/de/: main.ftl
client/locales/en/: main.ftl
client/locales/fr/: main.ftl
client/src/: app.rs  lib.rs  main.rs
client/src/auth/: mod.rs
client/src/builder/: canvas.rs  history.rs  mod.rs  node.rs  persist.rs  project.rs  script_node.rs  tree.rs
client/src/commands/: mod.rs
client/src/components/: mod.rs  navigation.rs  script_renderer.rs
client/src/components/designer/: canvas.rs  connector.rs  mod.rs  model.rs  table_box.rs  toolbar.rs
client/src/components/field/: mod.rs  reference_picker.rs
client/src/components/registries/: action.rs  editor.rs  formatter.rs  mod.rs  picker.rs  resolve.rs
client/src/components/table/: actions.rs  bottom_menu.rs  builder_preview.rs  column.rs  data_source.rs  entity_menu.rs  formatters.rs  global_filter.rs  mod.rs  page_size.rs  pager.rs  row_actions.rs  selection.rs  selection_column.rs  shell.rs  state.rs  table_view.rs  top_menu.rs  view.rs
client/src/components/table/column_editor/: mod.rs  popover.rs
client/src/components/table/filters/: bool_equals.rs  date_range.rs  enum_in.rs  helpers.rs  mod.rs  number_range.rs  registry.rs  text_contains.rs
client/src/graphql/: mod.rs  queries.rs
client/src/header/: mod.rs
client/src/i18n/: mod.rs
client/src/routes/: editor.rs  login.rs  mod.rs
client/src/script/: audit_queue.rs  data_source.rs  mod.rs  provider_lookup.rs  registry.rs  render_host.rs  sandbox.rs
client/src/script/engine/: mod.rs  rhai.rs
client/src/script/host/: audit.rs  ctx.rs  db.rs  i18n.rs  mod.rs  ui.rs
client/src/styling/: inline.rs  mod.rs  overrides.rs  tokens.rs
client/src/tabs/: mod.rs
client/src/validation/: mod.rs  script_task.rs
client/tests/: editor_validator_hookup.rs  graphql_token.rs  local_source_script_filter.rs  script_engine.rs  script_provider_lookup.rs  script_renderer.rs  validation_script_task.rs
docs/: EXTERNAL_TOOLS.md  standalone-projekt-skeleton.md
docs/adr/: 0001-codegen-not-runtime.md  0002-no-ecs-framework.md  0003-server-as-authority.md  0004-runtime-both-single-blob.md  0005-server-and-client-wasm.md  0006-erp-platform-layer.md  README.md
docs/queue/: Q0001-ccm-plugin-discovery-verifizieren.md  Q0002-tabelle-horizontaler-scroll-nicht-sichtbar.md  Q0003-builder-auth-gate-wildcard-zu-streng.md  Q0004-builder-keine-nav-link.md  Q0005-in-place-column-editor-auf-entity-table.md  Q0006-tabellen-h1-und-spaltenheader-zeigen-raw-keys.md  Q0007-named-views-drag-reorder-uiwiring.md  Q0008-named-views-popover-seeded-from-saved-view.md  Q0009-skript-sprache-fuer-reports-und-komponenten.md  Q0010-baseline-clippy-fmt-drift-fixen.md  Q0011-skript-audit-outcome-spoofing-haerten.md  Q0012-d2v-example-zu-eigenstaendigem-projekt.md  Q0013-minimale-livable-d2v2019-teilmenge.md  Q0014-validator-id-slot-und-script-prefix-filterpfad.md  Q0015-skeleton-doku-stale-und-minserverversion-semantik.md  Q0016-reference-resolver-rustc-ice.md  Q0017-validator-id-onsave-editor-hookup.md  Q0018-q0014-haertungen-scriptfilter-numerik-globalsearch-budget.md
scripts/: setup-ccm-symlinks.ps1  verify-ccm-symlinks.ps1
server/: Cargo.toml
server/src/: audit.rs  auth.rs  data.rs  db.rs  ddl.rs  directional_enum.rs  events.rs  int_enum.rs  lib.rs  main.rs  reference.rs  schema.rs  views.rs
server/src/approvals/: mod.rs
server/src/auth/: mod.rs  resolver.rs
server/src/email/: mod.rs  smtp.rs  stub.rs  template.rs
server/src/entity/: approvals.rs  attachments.rs  audit_log.rs  db_schemas.rs  entities.rs  entity_designs.rs  entity_views.rs  fx_rates.rs  groups.rs  job_runs.rs  jobs.rs  metadata_editor.rs  metadata_settings.rs  mod.rs  number_sequences.rs  period_locks.rs  permissions.rs  plugin_invocations.rs  plugins.rs  role_assignments.rs  roles.rs  script.rs  script_audit_log.rs  script_version.rs  sessions.rs  translatable_entries.rs  translatable_languages.rs  translatable_values.rs  user_groups.rs  user_implementation_choices.rs  users.rs
server/src/example/: format.rs  loader.rs  mod.rs
server/src/export/: mod.rs
server/src/fx/: mod.rs
server/src/jobs/: mod.rs
server/src/pdf/: mod.rs  stub.rs  typst.rs
server/src/period_locks/: mod.rs
server/src/plugins/: mod.rs
server/src/script/: mod.rs  provider_lookup.rs  run.rs  sandbox.rs  save.rs
server/src/script/engine/: mod.rs  rhai.rs
server/src/script/host/: audit.rs  ctx.rs  db.rs  i18n.rs  mod.rs  ui.rs
server/src/sequences/: format.rs  mod.rs
server/src/source/: config.rs  file.rs  foreign_sqlite.rs  introspect.rs  managed_sqlite.rs  memory.rs  mod.rs  mysql.rs  postgres.rs  rest.rs  sql.rs
server/src/state_machine/: mod.rs
server/src/storage/: local_fs.rs  mod.rs  s3.rs
server/tests/: approvals.rs  attachments.rs  d2v_all_17_listable.rs  d2v_e2e.rs  design_reset.rs  design_subscription.rs  e2e.rs  email_smtp.rs  email_stub.rs  email_template.rs  entity_views.rs  fx_rates.rs  gobd_append_only.rs  int_enum.rs  jobs.rs  loader.rs  loader_d2v.rs  loader_d2v_schema_check.rs  loader_data_dir_format.rs  loader_sources.rs  pdf_stub.rs  pdf_typst.rs  period_locks.rs  reference_resolver.rs  script_engine.rs  script_gate_integration.rs  script_graphql.rs  script_kind_roundtrip.rs  script_loader.rs  script_persistence.rs  script_provider_lookup.rs  script_run.rs  script_save.rs  script_symmetry.rs  sequences.rs  source_apply_schema.rs  source_foreign_sqlite.rs  source_managed_sqlite.rs  source_managed_table_locator.rs  source_memory_file_rest.rs  (+5 more)
server/tests/fixtures/scripts/example/scripts/: dashboard_widget.manifest.toml  dashboard_widget.rhai  eur_formatter.manifest.json  eur_formatter.rhai
shared/: Cargo.toml
(+244 files in other folders)
