[workspace]
resolver = "2"
members = ["shared", "server", "client", "cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Project Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optimierungs-Profile fuer WASM-Auslieferung
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
