[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dblicious"
path = "src/main.rs"

[dependencies]
server = { path = "../server" }
shared = { path = "../shared" }

clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rpassword = "7"
anyhow = "1"
serde = { workspace = true }
serde_json = { workspace = true }
