[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }

async-trait = "0.1"
async-graphql = { version = "7.0", features = ["chrono"] }
async-graphql-axum = "7.0"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
regex = "1.10"
sea-orm = { version = "1.1", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "macros",
    "with-json",
    "with-chrono",
] }
sea-query = "0.32"
parking_lot = "0.12"
toml = "0.8"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
extism = "1.21.0"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
serial_test = "3"
tempfile = "3"
