[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }

async-trait = "0.1"
async-graphql = { version = "7.0", features = ["chrono"] }
async-graphql-axum = "7.0"
axum = { version = "0.8", features = ["ws"] }
async-stream = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
regex = "1.10"
sea-orm = { version = "1.1", default-features = false, features = [
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "macros",
    "with-json",
    "with-chrono",
] }
sea-query = "0.32"
parking_lot = "0.12"
toml = "0.8"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
extism = "1.21.0"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rhai = { version = "1", default-features = false, features = ["std", "sync", "internals"] }
ulid = "1"
sha2 = "0.10"
# 1.7.7 Cron-Scheduler: 6/7-Feld-Cron-Expressions.
# Wir akzeptieren 5-Feld-Format (`* * * * *`) und prefixen intern mit "0 "
# (Sekunden-Feld), damit das gewohnte UNIX-Cron-Format reicht.
cron = "0.12"
# 1.7.14 XLSX-Export — typisierte Zellen (String/Number/Bool). Reines
# Write-API; Read-Tests laufen via `calamine` als dev-dep.
rust_xlsxwriter = "0.79"
# 1.7.10 SMTP-Email-Versand. `builder` fuer Message-Builder,
# `tokio1-rustls-tls` fuer async TLS-Transport (passt zu tokio-rustls,
# das wir auch fuer reqwest und sea-orm bereits ziehen). Der Stub-
# Transport (`AsyncStubTransport`) ist in lettre immer mit dabei und
# braucht kein eigenes Feature-Flag.
# 1.7.10 Email-Template-Rendering (render-layer, reines Jinja2-Subset,
# sandboxed, pure Rust). Serverseitig only.
minijinja = "2"
# 1.7.10 SMTP-Email-Versand. `builder` fuer Message-Builder,
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "smtp-transport",
    "tokio1-rustls-tls",
    "hostname",
] }
# 1.7.8 S3/MinIO-Backend fuer File-Storage. aws-sdk-s3 ist offiziell
# und MinIO-kompatibel ueber `endpoint_url` + `force_path_style`.
# `rustls`-Feature passt zur restlichen TLS-Stack-Wahl (lettre/sea-orm/
# reqwest); `behavior-version-latest` schaltet das aktuelle Default-
# Verhalten der SDK fest, damit Builds reproduzierbar bleiben.
aws-config = { version = "1", default-features = false, features = [
    "rustls",
    "rt-tokio",
    "behavior-version-latest",
] }
aws-sdk-s3 = { version = "1", default-features = false, features = [
    "rustls",
    "rt-tokio",
    "behavior-version-latest",
] }
aws-credential-types = "1"
# 1.7.9 Typst-PDF-Backend. typst-as-lib wrappt den typst-World-Trait;
# typst-kit-{fonts,embed-fonts} laedt die Default-Fonts aus typst-assets
# ohne eigenes TTF-Asset. default-features=false spart reqwest/ureq/
# packages (kein Remote-Package-Download). typst (Dict/IntoValue/
# PagedDocument) + typst-pdf (Export) gepinnt auf die von typst-as-lib
# 0.15.4 gezogene typst-Version 0.14.2.
typst = "=0.14.2"
typst-pdf = "=0.14.2"
typst-as-lib = { version = "0.15.4", default-features = false, features = [
    "typst-kit-fonts",
    "typst-kit-embed-fonts",
] }

[dev-dependencies]
serial_test = "3"
tempfile = "3"
shared = { path = "../shared", features = ["testing"] }
# 1.7.14 XLSX-Tests: Roundtrip-Reader fuer das von rust_xlsxwriter
# erzeugte Workbook. Wir nutzen nur das Reader-Subset, daher keine
# zusaetzlichen Features.
calamine = "0.30"
# Cross-Crate Symmetry-Test (Q0009 Phase 4): bringt
# `client::script::ClientHostApiRegistry` ueber den `rlib`-Pfad in den
# Test-Build. Keine Run-Time-Beziehung zwischen den Binaries.
client = { path = "../client" }
pdf-extract = "0.10.0"
